Fix Issue #455 When upgrading to 4.1.0, some preferences are not correctly imported, e.g. the default rhythms